Fixup contrast

--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,7 @@ nav a {
 
 .logo {
   text-decoration: none;
-  color: $grey-300;
+  color: $grey-500;
   letter-spacing: 0.05em;
 }
 
